Fixed overlapping issue!!!!!

--- a/css/main.css
+++ b/css/main.css
@@ -675,10 +675,11 @@ figure{
 	margin:0;
 	padding:0;
 	overflow:hidden;
+	position:relative;
 }
 
 figcaption{
-	position:relative;
+	position:absolute;
 	background-color:rgba(0,0,0,0.5);
 	margin-top:-16em;
 	padding-left:0.5em;
